--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -62,6 +62,13 @@ code {
     @apply w-96;
 }
 
+#PostPage .postContent blockquote {
+    padding: 0.5rem;
+    background-color: #f9f9f9;
+    border: 1px solid #e9e9e9;
+    margin-top: 0.5rem;
+}
+
 #ProjectPage .postContent ul, #ProjectPage .postContent ol, #PostPage .postContent ul, #PostPage .postContent ol {
     padding: revert;
     margin: revert;
