Work in progress for v2

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,162 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+    --background: #ffffff;
+    --foreground: #171717;
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+    --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+    --radius: 0.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+        --card: 0 0% 3.9%;
+        --card-foreground: 0 0% 98%;
+        --popover: 0 0% 3.9%;
+        --popover-foreground: 0 0% 98%;
+        --primary: 0 0% 98%;
+        --primary-foreground: 0 0% 9%;
+        --secondary: 0 0% 14.9%;
+        --secondary-foreground: 0 0% 98%;
+        --muted: 0 0% 14.9%;
+        --muted-foreground: 0 0% 63.9%;
+        --accent: 0 0% 14.9%;
+        --accent-foreground: 0 0% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 0 0% 14.9%;
+        --input: 0 0% 14.9%;
+        --ring: 0 0% 83.1%;
+    }
+}
+
+@theme inline {
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-muted-foreground: hsl(var(--muted-foreground));
+    --font-normal: var(--font-roboto);
+    --font-accent: var(--font-lato);
+}
+
+@layer base {
+    *,
+    :after,
+    :before {
+        border: 0 solid hsl(var(--border));
+    }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    @apply font-normal;
+    @apply overflow-x-hidden;
+}
+
+.box {
+    @apply mx-auto;
+    @apply px-4;
+    max-width: 900px;
+}
+
+.page > .box > main {
+    @apply mt-8;
+}
+
+ul,
+li {
+    list-style: auto;
+}
+
+a {
+    @apply text-indigo-700;
+    @apply hover:underline;
+}
+
+a.black {
+    @apply text-foreground;
+}
+
+a.no-link {
+    @apply text-foreground;
+    @apply hover:no-underline;
+}
+
+nav #nav-links > a {
+    @apply hover:text-foreground hover:no-underline font-bold text-muted-foreground;
+}
+
+#PostPage .postContent a,
+#HomePage main > div > div > a {
+    @apply !text-indigo-700;
+}
+
+code {
+    background-color: rgba(0, 0, 0, 0.05);
+    padding: 0.202em 0.5407911001em;
+    margin-left: 0.1rem;
+    margin-right: 0.1rem;
+}
+
+#PostPage .postContent p {
+    @apply my-2;
+}
+
+#PostPage .postContent h2 {
+    @apply text-2xl;
+    @apply mt-4;
+}
+
+#PostPage .postContent h3 {
+    @apply text-xl;
+    @apply mt-3;
+}
+
+#PostPage .postContent .post-image {
+    @apply rounded;
+}
+
+#PostPage .postContent .post-image.center {
+    @apply self-center;
+}
+
+#PostPage .postContent .post-image.medium {
+    @apply w-96;
+}
+
+#PostPage .postContent blockquote {
+    padding: 0.5rem;
+    background-color: #f9f9f9;
+    border: 1px solid #e9e9e9;
+    margin-top: 0.5rem;
+}
+
+#ProjectPage .postContent ul,
+#ProjectPage .postContent ol,
+#PostPage .postContent ul,
+#PostPage .postContent ol {
+    padding: revert;
+    margin: revert;
+}
+
+#ProjectPage .postContent ul li,
+#PostPage .postContent ul li {
+    list-style: disc;
 }
