--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+/*
+    --page-color: the A4 page color used in CV
+*/
+
 :root {
     --background: oklch(97% 0.001 106.424);
     --foreground: #171717;
@@ -73,6 +77,7 @@
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --color-muted-foreground: hsl(var(--muted-foreground));
+    --color-card: var(--card);
     --color-page: var(--page-color);
     --font-normal: var(--font-roboto);
     --font-accent: var(--font-lato);
@@ -134,12 +139,68 @@ nav .nav-links > a {
     }
 
     h2 + div {
-        @apply mt-2;
+        @apply mt-2 mb-4;
     }
 
     .box {
         @apply flex flex-col;
         @apply gap-30;
+    }
+
+    .home-project,
+    .home-project-base {
+        @apply border rounded-lg;
+        @apply bg-card;
+        @apply cursor-pointer;
+        @apply text-foreground no-underline;
+
+        &:hover {
+            @apply bg-red-500;
+        }
+    }
+
+    .home-project {
+        @apply flex flex-col overflow-hidden;
+
+        > .project-img {
+            @apply w-full overflow-hidden px-2 pt-2;
+
+            > img {
+                @apply w-full h-38;
+                @apply rounded-lg;
+                @apply object-cover;
+                @apply transition-transform duration-300 transform;
+            }
+        }
+
+        > .project-body {
+            @apply flex-1 flex flex-col;
+            @apply px-3 py-2;
+
+            > .project-title {
+                @apply font-accent font-bold;
+            }
+
+            > .project-desc {
+                @apply text-sm;
+            }
+
+            > .project-tags {
+                @apply flex gap-2;
+
+                > div {
+                    @apply text-sm;
+                }
+            }
+        }
+
+        &:hover {
+            > .project-img {
+                > img {
+                    @apply scale-110;
+                }
+            }
+        }
     }
 }
 
