--- a/app/globals.css
+++ b/app/globals.css
@@ -117,9 +117,16 @@ nav .nav-links > a {
     @apply hover:text-foreground hover:no-underline font-bold text-muted-foreground;
 }
 
-.clickable-img,
+.card {
+    @apply flex rounded bg-card;
+    @apply px-3 py-2;
+}
+
+.clickable-img > .img,
 .project-card,
-.project-card-base {
+.project-card-base,
+.post-card,
+.post-card-base {
     @apply border rounded-lg;
     @apply bg-card;
     @apply cursor-pointer;
@@ -131,24 +138,30 @@ nav .nav-links > a {
 }
 
 .clickable-img {
-    @apply flex justify-center items-center overflow-hidden;
+    @apply flex flex-col;
 
-    > img {
-        @apply object-contain;
-        @apply transition-transform duration-300 transform;
-    }
+    > .img {
+        @apply flex justify-center items-center overflow-hidden;
 
-    &:hover {
         > img {
-            @apply scale-110;
+            @apply object-contain;
+            @apply transition-transform duration-300 transform;
+        }
+
+        &:hover {
+            > img {
+                @apply scale-110;
+            }
         }
     }
 }
 
-.project-card {
+.project-card,
+.post-card {
     @apply flex flex-col overflow-hidden;
 
-    > .project-img {
+    > .project-img,
+    > .post-img {
         @apply w-full overflow-hidden px-2 pt-2;
 
         > img {
@@ -159,35 +172,99 @@ nav .nav-links > a {
         }
     }
 
-    > .project-body {
+    > .project-body,
+    > .post-body {
         @apply flex-1 flex flex-col;
         @apply px-3 py-2;
 
-        > .project-title {
+        > .project-title,
+        > .post-title {
             @apply font-accent font-bold;
         }
 
-        > .project-desc {
+        > .project-desc,
+        > .post-desc {
             @apply text-sm text-muted-foreground;
         }
 
-        > .project-tags {
+        > .project-tags,
+        > .post-tags {
             @apply flex gap-2;
 
             > div {
                 @apply bg-tag px-1 py-0.5 rounded;
-                @apply text-sm;
+                @apply text-sm text-nowrap;
             }
         }
     }
 
     &:hover {
-        > .project-img {
+        > .project-img,
+        > .post-img {
             > img {
                 @apply scale-110;
             }
         }
     }
+}
+
+.post-card {
+    > .post-img {
+        > img {
+            @apply h-50;
+        }
+    }
+}
+
+.blurred-sides-img > .alt,
+.clickable-img > .alt {
+    @apply text-muted-foreground self-center text-sm mt-0.5;
+}
+
+.blurred-sides-img {
+    @apply flex flex-col;
+
+    > .img {
+        @apply relative inline-flex items-center justify-center;
+        @apply rounded;
+        overflow: hidden;
+        line-height: 0;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 40%; /* adjust how wide the blurred sides are */
+            z-index: 1;
+            background-image: var(--bg-img);
+            background-repeat: no-repeat;
+            background-size: cover; /* fill area with the image */
+            filter: blur(7px); /* blur amount */
+            transform: scale(1.05); /* slightly enlarge to hide blur edges */
+            pointer-events: none;
+        }
+
+        /* left and right positioning + matching background-position */
+        &::before {
+            left: 0;
+            background-position: left center;
+        }
+        &::after {
+            right: 0;
+            background-position: right center;
+        }
+
+        > img {
+            position: relative;
+            z-index: 2;
+        }
+    }
+}
+
+.bc {
+    @apply fixed inset-0 z-50 flex items-center justify-center bg-stone-950/70 w-full h-full;
 }
 
 #HomePage {
@@ -214,49 +291,49 @@ code {
     margin-right: 0.1rem;
 }
 
-#PostPage .postContent p {
+#PostPage .post-content p {
     @apply my-2;
 }
 
-#PostPage .postContent h2 {
+#PostPage .post-content h2 {
     @apply text-2xl;
     @apply mt-4;
 }
 
-#PostPage .postContent h3 {
+#PostPage .post-content h3 {
     @apply text-xl;
     @apply mt-3;
 }
 
-#PostPage .postContent .post-image {
+#PostPage .post-content .post-image {
     @apply rounded;
 }
 
-#PostPage .postContent .post-image.center {
+#PostPage .post-content .post-image.center {
     @apply self-center;
 }
 
-#PostPage .postContent .post-image.medium {
+#PostPage .post-content .post-image.medium {
     @apply w-96;
 }
 
-#PostPage .postContent blockquote {
+#PostPage .post-content blockquote {
     padding: 0.5rem;
     background-color: #f9f9f9;
     border: 1px solid #e9e9e9;
     margin-top: 0.5rem;
 }
 
-#ProjectPage .postContent ul,
-#ProjectPage .postContent ol,
-#PostPage .postContent ul,
-#PostPage .postContent ol {
+#ProjectPage .post-content ul,
+#ProjectPage .post-content ol,
+#PostPage .post-content ul,
+#PostPage .post-content ol {
     padding: revert;
     margin: revert;
 }
 
-#ProjectPage .postContent ul li,
-#PostPage .postContent ul li {
+#ProjectPage .post-content ul li,
+#PostPage .post-content ul li {
     list-style: disc;
 }
 
@@ -280,8 +357,9 @@ code {
             position: relative;
             left: 4rem;
             top: 0;
+            width: calc(100% - 4rem);
 
-            &::after {
+            &.with-bullet::after {
                 @apply absolute;
                 @apply bg-white;
                 @apply border-4 border-foreground-accent;
@@ -299,5 +377,26 @@ code {
                 @apply mb-4;
             }
         }
+    }
+}
+
+#ProjectPage {
+    .statistics {
+        @apply p-2 rounded bg-card mb-4;
+
+        > div {
+            @apply flex flex-wrap gap-2;
+
+            > div:first-child {
+                @apply text-muted-foreground font-bold;
+            }
+
+            > div:last-child {
+            }
+        }
+    }
+
+    .post-content {
+        @apply mb-6;
     }
 }
