--- a/app/globals.css
+++ b/app/globals.css
@@ -11,14 +11,15 @@
     --background: oklch(97% 0.001 106.424);
     --foreground: #171717;
     --card-background: 0 0% 100%;
-    --card-hover-background: 0 0% 7%;
-    --tag-background: 0 0% 9%;
+    --card-hover-background: 0 0% 98%;
+    --tag-background: 0 0% 96%;
     --muted-foreground: 0 0% 45.1%;
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
     --page-color: #fff;
+    --foreground-light-accent: oklch(0.73 0.15 266.67);
     --foreground-accent: oklch(0.55 0.24 262.88);
     --button-background: oklch(0.55 0.24 262.88);
 }
@@ -34,8 +35,6 @@
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
     --page-color: oklch(20.5% 0 0);
-    --foreground-accent: oklch(0.55 0.24 262.88);
-    --button-background: oklch(0.55 0.24 262.88);
 }
 
 @media print {
@@ -59,6 +58,7 @@
     --color-card-hover: hsl(var(--card-hover-background));
     --color-tag: hsl(var(--tag-background));
     --color-page: var(--page-color);
+    --color-foreground-light-accent: var(--foreground-light-accent);
     --color-foreground-accent: var(--foreground-accent);
     --color-button-background: var(--button-background);
     --font-normal: var(--font-roboto);
@@ -110,7 +110,7 @@ a {
 }
 
 .accent-button {
-    @apply bg-button-background text-foreground p-2 rounded cursor-pointer;
+    @apply bg-button-background text-white p-2 rounded cursor-pointer;
 }
 
 nav .nav-links > a {
@@ -145,12 +145,12 @@ nav .nav-links > a {
 
         > img {
             @apply object-contain;
-            @apply transition-transform duration-300 transform;
+            @apply transition-transform duration-500 transform;
         }
 
         &:hover {
             > img {
-                @apply scale-110;
+                @apply scale-103;
             }
         }
     }
@@ -268,36 +268,56 @@ nav .nav-links > a {
 }
 
 pre {
-    background-color: #f5f5f5; /* light theme default */
-    padding: 1rem;
     overflow-x: auto;
-    border-radius: 0.5rem;
-    font-family: "Fira Code", monospace;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    counter-reset: line; /* for line numbers */
-}
+    padding: 1rem 0;
 
-pre code {
-    display: block;
-}
+    & [data-line] {
+        padding: 0 1rem;
+    }
 
-pre.shiki-pre {
-    counter-reset: line;
-}
-pre.shiki-pre code span.line {
-    display: block;
-    counter-increment: line;
-    padding-left: 3ch;
-    position: relative;
-}
-pre.shiki-pre code span.line::before {
-    content: counter(line);
-    position: absolute;
-    left: 0;
-    width: 2ch;
-    text-align: right;
-    color: #999;
+    code {
+        &[data-line-numbers] {
+            counter-reset: line;
+        }
+
+        &[data-line-numbers] > [data-line]::before {
+            counter-increment: line;
+            content: counter(line);
+
+            /* Other styling */
+            display: inline-block;
+            width: 0.75rem;
+            margin-right: 2rem;
+            text-align: right;
+            color: gray;
+        }
+
+        &[data-line-numbers-max-digits="2"] > [data-line]::before {
+            width: 1.25rem;
+        }
+
+        &[data-line-numbers-max-digits="3"] > [data-line]::before {
+            width: 1.75rem;
+        }
+
+        &[data-line-numbers-max-digits="4"] > [data-line]::before {
+            width: 2.25rem;
+        }
+
+        &[data-theme*=" "],
+        &[data-theme*=" "] span {
+            color: var(--shiki-light);
+            background-color: var(--shiki-light-bg);
+        }
+
+        @media (prefers-color-scheme: dark) {
+            &[data-theme*=" "],
+            &[data-theme*=" "] span {
+                color: var(--shiki-dark);
+                background-color: var(--shiki-dark-bg);
+            }
+        }
+    }
 }
 
 #HomePage {
@@ -317,44 +337,39 @@ pre.shiki-pre code span.line::before {
     }
 }
 
-code {
-    background-color: rgba(0, 0, 0, 0.05);
-    padding: 0.202em 0.5407911001em;
-    margin-left: 0.1rem;
-    margin-right: 0.1rem;
-}
+#PostPage .post-content {
+    p {
+        @apply my-2;
+    }
 
-#PostPage .post-content p {
-    @apply my-2;
-}
+    h2 {
+        @apply text-2xl;
+        @apply mt-4;
+    }
 
-#PostPage .post-content h2 {
-    @apply text-2xl;
-    @apply mt-4;
-}
+    h3 {
+        @apply text-xl;
+        @apply mt-3;
+    }
 
-#PostPage .post-content h3 {
-    @apply text-xl;
-    @apply mt-3;
-}
+    .post-image {
+        @apply rounded;
+    }
 
-#PostPage .post-content .post-image {
-    @apply rounded;
-}
+    .post-image.center {
+        @apply self-center;
+    }
 
-#PostPage .post-content .post-image.center {
-    @apply self-center;
-}
+    .post-image.medium {
+        @apply w-96;
+    }
 
-#PostPage .post-content .post-image.medium {
-    @apply w-96;
-}
-
-#PostPage .post-content blockquote {
-    padding: 0.5rem;
-    background-color: #f9f9f9;
-    border: 1px solid #e9e9e9;
-    margin-top: 0.5rem;
+    blockquote {
+        padding: 0.5rem;
+        background-color: #f9f9f9;
+        border: 1px solid #e9e9e9;
+        margin-top: 0.5rem;
+    }
 }
 
 #ProjectPage .post-content ul,
@@ -376,8 +391,7 @@ code {
         @apply py-12;
 
         &::after {
-            @apply absolute;
-            background-color: #ededed;
+            @apply absolute bg-foreground-light-accent;
             content: "";
             width: 6px;
             top: 0;
@@ -394,7 +408,7 @@ code {
 
             &.with-bullet::after {
                 @apply absolute;
-                @apply bg-white;
+                @apply bg-background;
                 @apply border-4 border-foreground-accent;
                 content: "";
                 width: 25px;
